# an-aws-a-day

./: LICENSE  README.md  TODOs.md  iam_role.json  lambda_function.py  pyproject.toml  s3_setting.json
docs/: index.md
docs/get_started/: index.md
examples/: enum.py  lambda_echo_bot.py  lambda_function_with_test.py  listdir.py  local_linebot.py  openai_lambda.py  rich_menus.py  s3_read_write_img.py  s3_read_write_txt.py  verify_signature.py  write_data_to_s3.py
examples/blog/: blod_demo.py
scripts/: build_layer.sh
