[tool.poetry]
name = "aws-educate-101-line-bot"
version = "0.0.1"
description = ""
authors = ["1chooo <hugo970217@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
line-bot-sdk = "^3.11.0"
boto3 = "^1.34.88"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
